Performance improvements, and SIMD instructions.